src/test/deca/context/invalid/inst_return_in_void_method_while.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return
// dans un while

class A  {

    void voidMethod(){
        while (true){
            return 5;
        }
    }
}



// Resultat:
//# TODO message error
